# Jubes

./: .gitignore  CMakeLists.txt  README.md
shaders/: main.frag  main.vert
src/: CMakeLists.txt  buffers.cpp  buffers.hpp  common.cpp  common.hpp  devices.cpp  devices.hpp  graphics.cpp  graphics.hpp  main.cpp  precompiled.hpp  present.cpp  present.hpp  sync.cpp  sync.hpp
